tests/ui/const-generics/issues/issue-63322-forbid-dyn.min.stderr
error: `&'static (dyn A + 'static)` is forbidden as the type of a const generic parameter
  --> $DIR/issue-63322-forbid-dyn.rs:9:18
   |
LL | fn test<const T: &'static dyn A>() {
   |                  ^^^^^^^^^^^^^^
   |
   = note: the only supported types are integers, `bool`, and `char`
help: add `#![feature(adt_const_params)]` to the crate attributes to enable more complex and user defined types
   |
LL + #![feature(adt_const_params)]
   |
help: add `#![feature(unsized_const_params)]` to the crate attributes to enable references to implement the `ConstParamTy` trait
   |
LL + #![feature(unsized_const_params)]
   |

error: aborting due to 1 previous error

